//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table Account {
  id String [pk]
  userId String [not null]
  type String [not null]
  provider String [not null]
  providerAccountId String [not null]
  refresh_token String
  access_token String
  expires_at Int
  token_type String
  scope String
  id_token String
  session_state String
  user User [not null]

  indexes {
    (provider, providerAccountId) [unique]
  }
}

Table Session {
  id String [pk]
  sessionToken String [unique, not null]
  userId String [not null]
  expires DateTime [not null]
  user User [not null]
}

Table User {
  id String [pk]
  name String
  email String [unique]
  position String
  description String
  emailVerified DateTime
  image String
  accounts Account [not null]
  sessions Session [not null]
  roles Role[] [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime
  Order Order [not null]
}

Table VerificationToken {
  identifier String [not null]
  token String [unique, not null]
  expires DateTime [not null]

  indexes {
    (identifier, token) [unique]
  }
}

Table Product {
  id String [pk]
  name String [not null]
  description String
  price Int [not null]
  image String
  stock Int [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  orderId String
  ProductOrder ProductOrder [not null]
}

Table Shipping {
  id String [pk]
  name String [not null]
  price Int [not null]
  city String [not null]
  address String [not null]
  status ShippingStatus [not null]
  deliveryAt DateTime [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  Order Order
  orderId String [unique]
}

Table ProductOrder {
  id String [pk]
  quantity Int [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  Order Order
  orderId String
  Product Product
  productId String
}

Table Order {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  invoiceNumber String [unique, not null]
  updatedAt DateTime [not null]
  status Status [not null]
  shipping Boolean [not null]
  subTotal Float [not null]
  iva Float [not null]
  total Float [not null]
  Customer Customer [not null]
  customerId String [not null]
  Shipping Shipping
  ProductOrder ProductOrder [not null]
  User User
  userId String
}

Table Customer {
  id String [pk]
  name String [not null]
  lastName String [not null]
  email String [not null]
  phone String [not null]
  address String [not null]
  city Cities
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  Orders Order [not null]
}

Enum Role {
  ADMIN
  USER
  VENDOR
  LOGISTICS
}

Enum ShippingStatus {
  REDY_TO_SHIP
  SHIPPED
  DELIVERED
}

Enum Status {
  PENDING
  COMPLETED
  CANCELED
}

Enum Cities {
  Chinandega
  Esteli
  Leon
  Managua
  Masaya
  Matagalpa
  Rivas
  Granada
  Jinotega
  Carazo
  Boaco
  Madriz
  Chontales
  NuevaSegovia
  RioSanJuan
}

Ref: Account.userId > User.id [delete: Cascade]

Ref: Session.userId > User.id [delete: Cascade]

Ref: Shipping.orderId - Order.id

Ref: ProductOrder.orderId > Order.id

Ref: ProductOrder.productId > Product.id

Ref: Order.customerId > Customer.id

Ref: Order.userId > User.id